add proper link to download script

--- a/src/content/docs/guides/nointernet.mdx
+++ b/src/content/docs/guides/nointernet.mdx
@@ -41,7 +41,7 @@ Some computing nodes do not have access to the internet at runtime. Since the pi
     <Tabs>
     <TabItem label="Command">
     ```bash
-    curl -fsSL https://github.com/nf-neuro/modules/blob/main/assets/download_pipeline.sh | bash -s -- -p scilus/sf-pediatric -r 0.2.1 -d 1 -o ./containers -c ./singularity_cache
+    curl -fsSL https://raw.githubusercontent.com/nf-neuro/modules/main/assets/download_pipeline.sh | bash -s -- -p scilus/sf-pediatric -r 0.2.1 -d 1 -o ./containers -c ./singularity_cache
     ```
     </TabItem>
     <TabItem label="Expected Output">
